k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalog
  namespace: productcatalog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: productcatalog
  template:
    metadata:
      labels:
        app: productcatalog
    spec:
      containers:
      - name: productcatalogapi
        image: sfilipovski/product-catalog-api
        ports:
        - containerPort: 8080
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
