k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: productcatalog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
        - name: "init-database"
          mountPath: "/docker-entrypoint-initdb.d/"
      volumes:
      - name: "mongo-data-dir"
      - name: "init-database"
        configMap:
          name: create-db-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: productcatalog
spec:
  selector:
    app: mongodb
  ports:
    - targetPort: 27017
      port: 27017
