k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productcatalog-service
  namespace: productcatalog
spec:
  selector:
    app: productcatalog
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 5150
      targetPort: 8080
