k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productcatalog-ingress
  namespace: productcatalog
spec:
  rules:
  - host: productcatalog.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productcatalog-service
            port:
              number: 8080
